Make sure certain cells don't wrap

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -1,3 +1,10 @@
+th {
+  text-wrap: nowrap;
+}
+.nowrap {
+  text-wrap: nowrap;
+}
+
 nav {
   display: flex;
   flex-grow: 1;
